Increase game speed (#36)
* added decreaseCycleDelay(int) to Waiter class with appropriate tests
* created javadocs for Waiter class
* update testng.xml configuration

--- a/.gitignore
+++ b/.gitignore
@@ -150,5 +150,8 @@ tags
 # Persistent undo
 [._]*.un~
 
+#VS Code
+.vscode
+
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,intellij+all,vim
 
